#fix overflow bug on .content

--- a/_sass/generic.overrides.scss
+++ b/_sass/generic.overrides.scss
@@ -50,6 +50,10 @@ p {
 .content {
     padding: 0;
     background-color: $ns-white;
+
+    @include sm-max {
+        overflow: hidden;
+    }
     
     @include md {
         min-height: calc(100vh - 140px);
